--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <style>
+      .cl-internal-d57fcb {
+        display: none;
+      }
+    </style>
     <script
       src="https://upload-widget.cloudinary.com/global/all.js"
       type="text/javascript"
