--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,13 @@
       .cl-internal-d57fcb {
         display: none;
       }
+      .custom-gradient {
+        background-image: linear-gradient(to bottom right, #020131, #ffffff);
+      }
+
+      .custom-gradient:hover {
+        background-image: linear-gradient(to bottom right, #ffffff, #020131);
+      }
     </style>
     <script
       src="https://upload-widget.cloudinary.com/global/all.js"
